[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://TerminalPreviewer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Terminal.tres" type="Theme" id=3]
[ext_resource path="res://Toolbar.gd" type="Script" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="Toolbar" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_right = 1024.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="VBoxContainer/PanelContainer/Toolbar"]
margin_bottom = 20.0

[node name="File" type="MenuButton" parent="VBoxContainer/PanelContainer/Toolbar"]
margin_left = 4.0
margin_right = 27.0
margin_bottom = 20.0
text = "File"
items = [ "Open", null, 0, false, false, 0, 0, null, "", false, "Save as Terminal", null, 0, false, false, 1, 0, null, "", false, "Export BBCode", null, 0, false, false, 2, 0, null, "", false ]
switch_on_hover = true

[node name="Control" type="Control" parent="VBoxContainer/PanelContainer/Toolbar"]
margin_left = 31.0
margin_right = 31.0
margin_bottom = 20.0

[node name="About" type="MenuButton" parent="VBoxContainer/PanelContainer/Toolbar"]
margin_left = 35.0
margin_right = 73.0
margin_bottom = 20.0
text = "About"
items = [ "About", null, 0, false, false, 0, 0, null, "", false ]
switch_on_hover = true

[node name="HBoxContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SplitContainer" type="VSplitContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 1024.0
margin_bottom = 576.0

[node name="Previewer" parent="VBoxContainer/HBoxContainer/SplitContainer" instance=ExtResource( 2 )]
margin_bottom = 378.0

[node name="Editor" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/SplitContainer"]
margin_top = 390.0
margin_right = 1024.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/SplitContainer/Editor"]
margin_right = 1024.0
margin_bottom = 14.0

[node name="Update" type="Button" parent="VBoxContainer/HBoxContainer/SplitContainer/Editor/HBoxContainer"]
margin_right = 104.0
margin_bottom = 14.0
text = "Update preview"

[node name="Inline" type="TextEdit" parent="VBoxContainer/HBoxContainer/SplitContainer/Editor"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 186.0
size_flags_vertical = 3
show_line_numbers = true
draw_tabs = true
draw_spaces = true
wrap_enabled = true

[node name="SaveDialog" type="FileDialog" parent="."]
visible = true
margin_left = 533.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 393.0
window_title = "Guardar un Archivo"
resizable = true
access = 2
filters = PoolStringArray( "*.txt, *.bbcode" )
current_dir = "E:/Github/Terminal-Viewer"
current_path = "E:/Github/Terminal-Viewer/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenDialog" type="FileDialog" parent="."]
visible = true
margin_left = 526.0
margin_top = 117.0
margin_right = 1002.0
margin_bottom = 492.0
window_title = "Abrir un Archivo"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.txt" )
current_dir = "E:/Github/Terminal-Viewer"
current_path = "E:/Github/Terminal-Viewer/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="AcceptDialog" parent="."]
margin_left = 379.0
margin_top = 213.0
margin_right = 726.0
margin_bottom = 390.0
window_title = "About"
dialog_text = "Coded by 810-dude
All code under MIT License

Created to allow and simpify translations,
special thanks to exepa and Leviatan. 

You can contribute to the code at
https://github.com/RiseRobotRise/Terminal-Viewer"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="about_option_selected" from="VBoxContainer/PanelContainer/Toolbar" to="." method="_on_Toolbar_about_option_selected"]
[connection signal="file_option_selected" from="VBoxContainer/PanelContainer/Toolbar" to="." method="_on_Toolbar_file_option_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SplitContainer/Editor/HBoxContainer/Update" to="." method="_on_Update_pressed"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_SaveDialog_file_selected"]
[connection signal="file_selected" from="OpenDialog" to="." method="_on_FileDialog_file_selected"]
